First controller and Razor pages tests

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Studant @ViewData["Studant"]</p>
+
+<address>
+    <strong>Contact: </strong> <a href="https://www.linkedin.com/in/andrenuneslimasp/">LinkedIn Profile</a>
+</address>
+
